--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="/js/phaser.min.js"></script>
-    <script src="/js/game.js"></script>
+    <script src="Ballout/js/phaser.min.js"></script>
+    <script src="Ballout/js/game.js"></script>
   </head>
   <body>
   </body>
