--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <script src="js/game.js"></script>
   </head>
   <body>
+    <h1>Ballout!</h1>
+    <p><strong>Controls</strong></p>
+    <p><strong>Move Player</strong> Left / Right</p>
+    <p><strong>Speed Boost</strong> Shift</p>
+    <p><strong>Pause</strong> Space</p>
   </body>
 </html>
