--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
   </head>
   <body>
     <h1>Ballout!</h1>
-    <p><strong>Controls</strong></p>
-    <p><strong>Move Player</strong> Left / Right</p>
-    <p><strong>Speed Boost</strong> Shift</p>
-    <p><strong>Pause</strong> Space</p>
+    <p><strong>Controls:</strong> <strong>Move Player</strong> Left / Right | <strong>Speed Boost</strong> Shift | <strong>Pause</strong> Space</p>
   </body>
 </html>
