--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <title>Ballout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/phaser.min.js"></script>
     <script src="js/game.js"></script>
   </head>
   <body>
-    <h1>Ballout!</h1>
-    <p><strong>Controls:</strong> <strong>Move Player</strong> Left / Right | <strong>Speed Boost</strong> Shift | <strong>Pause</strong> Esc</p>
+    <div class="container">
+      <h1>Ballout!</h1>
+      <p><strong>Controls:</strong> <strong>Move Player</strong> Left / Right | <strong>Speed Boost</strong> Shift | <strong>Pause</strong> Esc</p>
+
+      <div id="game-canvas"></div>
+    </div>
   </body>
 </html>
