updated some attributions

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <p><strong>Controls:</strong> <strong>Move Player</strong> Left / Right | <strong>Speed Boost</strong> Shift | <strong>Pause</strong> Esc</p>
 
       <div id="game-canvas"></div>
+
+      <span>Music: <a href="http://trash80.com/" target="_blank">Trash80 - Robot Sneakers</a></span>
     </div>
   </body>
 </html>
