added music note

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <div id="game-canvas"></div>
 
-      <span>Music: <a href="http://trash80.com/" target="_blank">Trash80 - Robot Sneakers</a></span>
+      <span>&#9835; Music: <a href="http://trash80.com/" target="_blank">Trash80 - Robot Sneakers</a></span>
     </div>
   </body>
 </html>
