--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/phaser.min.js"></script>
+    <script src="js/boot.js"></script>
+    <script src="js/load.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/play.js"></script>
+    <script src="js/complete.js"></script>
     <script src="js/game.js"></script>
   </head>
   <body>
