rebound pause again

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul>
           <li><strong>Move Player:</strong> Left / Right</li>
           <li><strong>Speed Boost:</strong> Shift</li>
-          <li><strong>Pause:</strong> P</li>
+          <li><strong>Pause:</strong> Space</li>
         </ul>
 
         <h2>Gameplay</h2>
