added more backgrounds for each level

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <li><strong>Move Player:</strong> Left / Right</li>
           <li><strong>Speed Boost:</strong> Shift</li>
           <li><strong>Pause:</strong> Space</li>
+          <li><strong>Quit:</strong> Esc</li>
         </ul>
 
         <h2>Gameplay</h2>
