--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/phaser.min.js"></script>
+    <script src="js/helpers.js"></script>
     <script src="js/boot.js"></script>
     <script src="js/load.js"></script>
     <script src="js/menu.js"></script>
