Initial high score API

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
           <li>Increase your score by killing blocks (20 points) and increase your combo multiplier by 1 for every block you hit in a row. When the ball hits the player ship the combo multiplier is reset.</li>
         </ul>
 
+        <label>Name: <input id="name" type="text" value="Player"></label>
+        <div id="scores"></div>
 
         <span>&#9835; Music: <a href="http://trash80.com/" target="_blank">Trash80</a></span>
       </div>
