Update high score display

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
   <body>
     <div class="container">
 
+      <div style="margin-top:20px">
+        <label>Name: <input id="name" type="text" value="Player"></label>
+        <div>
+          <h2>High Scores</h2>
+          <ol id="game-scores"></ol>
+        </div>
+      </div>
+
       <div id="game-canvas"></div>
 
       <div class="game-info">
@@ -42,9 +50,6 @@
           <li>The ball speeds up every time it hits an object.</li>
           <li>Increase your score by killing blocks (20 points) and increase your combo multiplier by 1 for every block you hit in a row. When the ball hits the player ship the combo multiplier is reset.</li>
         </ul>
-
-        <label>Name: <input id="name" type="text" value="Player"></label>
-        <div id="scores"></div>
 
         <span>&#9835; Music: <a href="http://trash80.com/" target="_blank">Trash80</a></span>
       </div>
