gulp and babel are in for prep to move to ES6

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="js/phaser.min.js"></script>
-    <script src="js/helpers.js"></script>
-    <script src="js/boot.js"></script>
-    <script src="js/load.js"></script>
-    <script src="js/menu.js"></script>
-    <script src="js/play.js"></script>
-    <script src="js/game.js"></script>
+    <script src="js/lib/phaser.min.js"></script>
+    <!--<script src="js/src/helpers.js"></script>
+    <script src="js/src/boot.js"></script>
+    <script src="js/src/load.js"></script>
+    <script src="js/src/menu.js"></script>
+    <script src="js/src/play.js"></script>
+    <script src="js/src/game.js"></script>-->
+
+    <script src="js/all.js"></script>
   </head>
   <body>
     <div class="container">
