Update controls on tutorial pane.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <h2>Controls</h2>
         <ul>
-          <li><strong>Move Player:</strong> Left / Right</li>
+          <li><strong>Move Player:</strong> A / D</li>
           <li><strong>Speed Boost:</strong> Shift</li>
           <li><strong>Pause:</strong> Space</li>
           <li><strong>Quit:</strong> Esc</li>
